Removed some PMD errors
SVN-Revision: 2392